--- a/index.html
+++ b/index.html
@@ -1,18 +1,16 @@
 
 <!DOCTYPE html>
 <html lang="fr">
-
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com/"></script>
-    <script src="js/script.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="./js/script.js"></script>
 
 
     <link rel="stylesheet" href="css/style.css">
-    <title>LawOff - Website</title>
+    <title>Sprintey - Website</title>
 </head>
 
 <body cz-shortcut-listen="true" br-mode="off" saccades-color="" fixation-strength="2" saccades-interval="0" style="--fixation-edge-opacity:80%; --br-line-height:1; --br-boldness:600;"><div id="root">
@@ -49,25 +47,25 @@
                                 </svg>
                                 <span class="sr-only">Github</span>
                             </a>
-                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-indigo-400 hover:bg-indigo-400 rounded-full hover:text-white transition-colors duration-300" href="https://discord.gg/cPKc5B6Gnv">
+                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-indigo-400 hover:bg-indigo-400 rounded-full hover:text-white transition-colors duration-300" href="https://discord.gg/Y4hDH6rFRc">
                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="3 0 45 45" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:currentColor; --darkreader-inline-stroke:currentColor;">
                                     <path d="M 41.625 10.769531 C 37.644531 7.566406 31.347656 7.023438 31.078125 7.003906 C 30.660156 6.96875 30.261719 7.203125 30.089844 7.589844 C 30.074219 7.613281 29.9375 7.929688 29.785156 8.421875 C 32.417969 8.867188 35.652344 9.761719 38.578125 11.578125 C 39.046875 11.867188 39.191406 12.484375 38.902344 12.953125 C 38.710938 13.261719 38.386719 13.429688 38.050781 13.429688 C 37.871094 13.429688 37.6875 13.378906 37.523438 13.277344 C 32.492188 10.15625 26.210938 10 25 10 C 23.789063 10 17.503906 10.15625 12.476563 13.277344 C 12.007813 13.570313 11.390625 13.425781 11.101563 12.957031 C 10.808594 12.484375 10.953125 11.871094 11.421875 11.578125 C 14.347656 9.765625 17.582031 8.867188 20.214844 8.425781 C 20.0625 7.929688 19.925781 7.617188 19.914063 7.589844 C 19.738281 7.203125 19.34375 6.960938 18.921875 7.003906 C 18.652344 7.023438 12.355469 7.566406 8.320313 10.8125 C 6.214844 12.761719 2 24.152344 2 34 C 2 34.175781 2.046875 34.34375 2.132813 34.496094 C 5.039063 39.605469 12.972656 40.941406 14.78125 41 C 14.789063 41 14.800781 41 14.8125 41 C 15.132813 41 15.433594 40.847656 15.621094 40.589844 L 17.449219 38.074219 C 12.515625 36.800781 9.996094 34.636719 9.851563 34.507813 C 9.4375 34.144531 9.398438 33.511719 9.765625 33.097656 C 10.128906 32.683594 10.761719 32.644531 11.175781 33.007813 C 11.234375 33.0625 15.875 37 25 37 C 34.140625 37 38.78125 33.046875 38.828125 33.007813 C 39.242188 32.648438 39.871094 32.683594 40.238281 33.101563 C 40.601563 33.515625 40.5625 34.144531 40.148438 34.507813 C 40.003906 34.636719 37.484375 36.800781 32.550781 38.074219 L 34.378906 40.589844 C 34.566406 40.847656 34.867188 41 35.1875 41 C 35.199219 41 35.210938 41 35.21875 41 C 37.027344 40.941406 44.960938 39.605469 47.867188 34.496094 C 47.953125 34.34375 48 34.175781 48 34 C 48 24.152344 43.785156 12.761719 41.625 10.769531 Z M 18.5 30 C 16.566406 30 15 28.210938 15 26 C 15 23.789063 16.566406 22 18.5 22 C 20.433594 22 22 23.789063 22 26 C 22 28.210938 20.433594 30 18.5 30 Z M 31.5 30 C 29.566406 30 28 28.210938 28 26 C 28 23.789063 29.566406 22 31.5 22 C 33.433594 22 35 23.789063 35 26 C 35 28.210938 33.433594 30 31.5 30 Z"></path>
                                 </svg>
                                 <span class="sr-only">Discord</span>
                             </a>
-                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-blue-500 hover:bg-blue-500 rounded-full hover:text-white transition-colors duration-300" href="https://twitter.com/law_tutorials">
+                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-blue-500 hover:bg-blue-500 rounded-full hover:text-white transition-colors duration-300" href="https://twitter.com/sprinteyoff">
                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:currentColor; --darkreader-inline-stroke:currentColor;">
                                     <path d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"></path>
                                 </svg>
                                 <span class="sr-only">Twitter</span>
                             </a>
-                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-teal-500 hover:bg-teal-500 rounded-full hover:text-white transition-colors duration-300" href="mailto:law_official@protonmail.com">
+                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-teal-500 hover:bg-teal-500 rounded-full hover:text-white transition-colors duration-300" href="mailto:Sprintey@proton.me">
                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 512 512" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:currentColor; --darkreader-inline-stroke:currentColor;">
                                     <path d="M464 64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V112c0-26.51-21.49-48-48-48zm0 48v40.805c-22.422 18.259-58.168 46.651-134.587 106.49-16.841 13.247-50.201 45.072-73.413 44.701-23.208.375-56.579-31.459-73.413-44.701C106.18 199.465 70.425 171.067 48 152.805V112h416zM48 400V214.398c22.914 18.251 55.409 43.862 104.938 82.646 21.857 17.205 60.134 55.186 103.062 54.955 42.717.231 80.509-37.199 103.053-54.947 49.528-38.783 82.032-64.401 104.947-82.653V400H48z"></path>
                                 </svg>
                                 <span class="sr-only">Email</span>
                             </a>
-                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-yellow-500 hover:bg-yellow-500 rounded-full hover:text-white transition-colors duration-300" href="mailto:law_official@protonmail.com">
+                            <a class="text-xl m-1 p-1 sm:m-2 sm:p-2 text-yellow-500 hover:bg-yellow-500 rounded-full hover:text-white transition-colors duration-300" href="mailto:Sprintey@proton.me">
                                 <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="3 3 26 26" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg" data-darkreader-inline-fill="" data-darkreader-inline-stroke="" style="--darkreader-inline-fill:currentColor; --darkreader-inline-stroke:currentColor;">
                                     <path d="M 12 3 L 12 6 L 8 6 L 8 26 L 12 26 L 12 29 L 14 29 L 14 26 L 16 26 L 16 29 L 18 29 L 18 26 L 19.5 26 C 22.527344 26 25 23.527344 25 20.5 C 25 18.417969 23.839844 16.589844 22.125 15.65625 C 23.28125 14.644531 24 13.148438 24 11.5 C 24 8.472656 21.527344 6 18.5 6 L 18 6 L 18 3 L 16 3 L 16 6 L 14 6 L 14 3 Z M 10 8 L 18.5 8 C 20.445313 8 22 9.554688 22 11.5 C 22 13.445313 20.445313 15 18.5 15 L 10 15 Z M 10 17 L 19.5 17 C 21.445313 17 23 18.554688 23 20.5 C 23 22.445313 21.445313 24 19.5 24 L 10 24 Z"></path>
                                 </svg>
@@ -91,7 +89,7 @@
                     <div class=" grid grid-cols-1 md:grid-cols-2 gap-5 ">
                         <a href="https://www.youtube.com/watch?v=yExK6CvwTGg" target="_blank" rel="noreferrer" 
                         class=" anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="../i3.ytimg.com/vi/yExK6CvwTGg/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://i3.ytimg.com/vi/yExK6CvwTGg/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
                                 <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">Make Your Discord LOOK MODERN- Fluent Theme</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
@@ -103,7 +101,7 @@
                         </a>
                         <a href="https://www.youtube.com/watch?v=VZQSBsnobJA" target="_blank" rel="noreferrer" 
                         class="anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="../i3.ytimg.com/vi/VZQSBsnobJA/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://i3.ytimg.com/vi/VZQSBsnobJA/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
                                 <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">How to EASILY Organize your Discord DM's</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
@@ -114,7 +112,7 @@
                         </a>
                         <a href="https://www.youtube.com/watch?v=ByNY60Nty4A" target="_blank" rel="noreferrer" 
                         class="anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="../i3.ytimg.com/vi/ByNY60Nty4A/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://i3.ytimg.com/vi/ByNY60Nty4A/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
                                 <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">How to Check ALL your Discord STATS</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
@@ -125,7 +123,7 @@
                         </a>
                         <a href="https://www.youtube.com/watch?v=-bo-Z01os-s" target="_blank" rel="noreferrer" 
                         class="anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="../i3.ytimg.com/vi/-bo-Z01os-s/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://i3.ytimg.com/vi/-bo-Z01os-s/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
                                 <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">How to have a FLUENT YouTube Interface</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
@@ -147,6 +145,4 @@
         </div>
     </div>
 </body>
-
-
 </html>
