--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             </div>
             <footer class="pb-8 flex justify-center items-center mt-10 text-gray-500 dark:text-gray-400 ">
                 <div class="flex flex-col items-center ">
-                    <p class="text-sm">© 2023 Sprinteyoff. All rights reserved.</p>
+                    <p class="text-sm">© 2023 Sprintey. All rights reserved.</p>
                     <p class="text-xs">Made with <span class="text-red-600 dark:text-red-400">♥</span> in Portugal.</p>
                 </div>
             </footer>
