--- a/index.html
+++ b/index.html
@@ -79,51 +79,50 @@
 
             <div class="flex justify-center items-center h-screen" id="projects">
                 <div class="py-12">
-                    <h1 id="works" class="text-xl mb-5 text-indigo-600 dark:text-white">Latest Videos: </h1>
+                    <h1 id="works" class="text-xl mb-5 text-indigo-600 dark:text-white">Docs: </h1>
                     <div class=" grid grid-cols-1 md:grid-cols-2 gap-5 ">
-                        <a href="https://www.youtube.com/watch?v=yExK6CvwTGg" target="_blank" rel="noreferrer" 
+                        <a href="https://discord.gg/Y4hDH6rFRc" target="_blank" rel="noreferrer" 
                         class=" anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="https://i3.ytimg.com/vi/yExK6CvwTGg/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://sprintey.github.io/img/cat.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
-                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">Make Your Discord LOOK MODERN- Fluent Theme</h3>
+                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">Test</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Discord</span>
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Fluent</span>
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">CSS</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Marketing</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Communication</span>
                                 </p>
                             </div>
                         </a>
-                        <a href="https://www.youtube.com/watch?v=VZQSBsnobJA" target="_blank" rel="noreferrer" 
+                        <a href="https://discord.gg/Y4hDH6rFRc" target="_blank" rel="noreferrer" 
                         class="anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="https://i3.ytimg.com/vi/VZQSBsnobJA/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://sprintey.github.io/img/cat.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
-                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">How to EASILY Organize your Discord DM's</h3>
+                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">Test</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Discord</span>
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Plugins</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
                                 </p>
                             </div>
                         </a>
-                        <a href="https://www.youtube.com/watch?v=ByNY60Nty4A" target="_blank" rel="noreferrer" 
+                        <a href="https://discord.gg/Y4hDH6rFRc" target="_blank" rel="noreferrer" 
                         class="anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="https://i3.ytimg.com/vi/ByNY60Nty4A/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://sprintey.github.io/img/cat.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
-                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">How to Check ALL your Discord STATS</h3>
+                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">Test</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Discord</span>
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Data</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
                                 </p>
                             </div>
                         </a>
-                        <a href="https://www.youtube.com/watch?v=-bo-Z01os-s" target="_blank" rel="noreferrer" 
+                        <a href="https://discord.gg/Y4hDH6rFRc" target="_blank" rel="noreferrer" 
                         class="anim-box backdrop-blur-md bg-gray-800/50 rounded-lg overflow-hidden">
-                            <img src="https://i3.ytimg.com/vi/-bo-Z01os-s/maxresdefault.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
+                            <img src="https://sprintey.github.io/img/cat.jpg" alt="work" class="w-full h-36 md:h-48 object-cover">
                             <div class="w-full p-5 text-gray-600 dark:text-gray-300 ">
-                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">How to have a FLUENT YouTube Interface</h3>
+                                <h3 class="text-lg md:text-xl mb-2 md:mb-3 font-semibold">Test</h3>
                                 <p class="flex flex-wrap gap-2 flex-row items-center justify-start text-xs md:text-sm ">
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">YouTube</span>
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Fluent</span>
-                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">CSS</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
+                                    <span class="inline-block px-2 py-1 bg-slate-200 dark:bg-slate-900 rounded-md">Test</span>
                                 </p>
                             </div>
                         </a>
